about page spacing issue

--- a/stylesheets/_responsive.scss
+++ b/stylesheets/_responsive.scss
@@ -296,10 +296,6 @@
     }
     
   }
-  .about .col-md-7 img {
-    margin: 0 -30px;
-    width: calc(100% + 60px);
-  }
   .topnav .tabs {
     display: none;
   }
